# MeshProcessing

./: .gitignore  CMakeLists.txt  ReadMe.md  command.txt
configs/: config.json
headers/: cgal_demo.h  configs.h  logger.h  mesh_edge_collapse.h
sources/: cgal_demo.cpp  configs.cpp  logger.cpp  main.cpp  mesh_edge_collapse.cpp
